# GlobalCounter

./: Cargo.toml  README.md  key.prod  private_key.pepk  settings.gradle  tusk.yml
.cargo/: config
app/: build.gradle
app/src/androidTest/java/io/rousan/globalcounter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/io/rousan/globalcounter/: App.java
app/src/main/java/io/rousan/globalcounter/activities/: MainActivity.java
app/src/main/java/io/rousan/globalcounter/bridge/: Bridge.java  MessageData.java
app/src/main/java/io/rousan/globalcounter/message/: What.java
app/src/main/java/io/rousan/globalcounter/services/: WorkerService.java
app/src/main/java/io/rousan/globalcounter/utils/: Utils.java
app/src/main/jni/: io_rousan_globalcounter_bridge_Bridge.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/main/rust/: error.rs  lib.rs
app/src/main/rust/bridge/jni_impl/: mod.rs
app/src/main/rust/constants/: mod.rs
app/src/main/rust/counter/: mod.rs  ws.rs
app/src/main/rust/logger/: mod.rs
app/src/main/rust/message/: what.rs
app/src/main/rust/types/: mod.rs
app/src/test/java/io/rousan/globalcounter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
scripts/: build.dev.sh  build.prod.sh  gen.jni.sh
